# DeskCleaner

./: .gitignore  .gitmodules  README.md
src/desk_cleaner_bringup/: package.xml  setup.cfg  setup.py
src/desk_cleaner_bringup/config/: so101_controllers.yaml  ur5e_controllers.yaml
src/desk_cleaner_bringup/desk_cleaner_bringup/: utils.py
src/desk_cleaner_bringup/launch/: so101_bringup.launch.py  so101_gazebo.launch.py  ur5e_bringup.launch.py  ur5e_gazebo.launch.py
src/desk_cleaner_bringup/rviz/: desk_cleaner.rviz
src/desk_cleaner_bringup/urdf/: ur5e_desk_cleaner.urdf.xacro  ur5e_desk_cleaner.urdf.xacro.bkup
src/desk_cleaner_bringup/worlds/: desk.world
src/desk_cleaner_description/: CMakeLists.txt  package.xml
src/desk_cleaner_description/desk_cleaner_description/: utils.py
src/desk_cleaner_description/so101/urdf/: so101_arm.urdf.xacro  so101_arm_common.xacro
src/desk_cleaner_description/so101/urdf/end_effectors/: so101_ee_follower.xacro  so101_ee_leader.xacro
src/desk_cleaner_description/so101/urdf/ros2_control/: so101_ros2_control.xacro
src/desk_cleaner_description/ur5e/urdf/: ur5e_desk_cleaner.urdf.xacro
src/desk_cleaner_interfaces/: CMakeLists.txt  package.xml
src/desk_cleaner_interfaces/srv/: MoveToCartesian.srv
src/desk_cleaner_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/desk_cleaner_moveit_config/config/: controllers.yaml  desk_cleaner.srdf.xacro  moveit_cpp.yaml  ompl_planning.yaml  planning_pipelines.yaml  trajectory_execution.yaml
src/desk_cleaner_moveit_config/config/so101/: kinematics.yaml  ompl_planning.yaml  planning_pipelines.yaml  so101_arm.srdf
src/desk_cleaner_moveit_config/config/so_101/: moveit_controllers.yaml  pilz_industrial_motion_planner_planning.yaml
src/desk_cleaner_moveit_config/config/ur5e/: joint_limits.yaml  kinematics.yaml
src/desk_cleaner_moveit_config/launch/: move_group.launch.py  move_group_so101.launch.py
src/desk_cleaner_task_handler/: CMakeLists.txt  package.xml
src/desk_cleaner_task_handler/include/desk_cleaner_task_handler/: moveit_task_handler.hpp
src/desk_cleaner_task_handler/src/: moveit_task_handler.cpp  task_handler_node.cpp
