<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>desk_cleaner_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for the desk cleaner system</description>
  <maintainer email="todo@todo.com">developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core desk cleaner packages -->
  <exec_depend>desk_cleaner_perception</exec_depend>
  <exec_depend>desk_cleaner_arm_driver</exec_depend>
  <exec_depend>desk_cleaner_planning</exec_depend>
  <exec_depend>desk_cleaner_interfaces</exec_depend>

  <!-- Launch infrastructure -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <!-- Gazebo Classic (Humble) -->
  <exec_depend>gazebo_ros</exec_depend>

  <!-- UR5e + Robotiq 2F-85 -->
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>robotiq_controllers</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
