<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>desk_cleaner_task_handler</name>
  <version>0.1.0</version>
  <description>Simplified MoveIt2 task handler with no configuration needed</description>
  <maintainer email="todo@todo.com">developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>desk_cleaner_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
